@@ -30,7 +30,7 @@ classifiers = [
 license = {text = "GPL v3"}
 dependencies = [
     "fcswrite>=0.5.1",
-    "dclab[dcor,http]>=0.62.5",
+    "dclab[dcor,http,s3]>=0.62.5",
     "h5py>=2.8.0",
     "numpy>=1.21",  # CVE-2021-33430
     "pyqt6",
